fix scrollbar on mobile

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -50,6 +50,10 @@ html {
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
+::-webkit-scrollbar {
+  min-width: 1px;
+  min-height: 1px;
+}
 @font-face {
   font-family: Bebas;
   src: url(../assets/fonts/BebasNeue-Regular.ttf);
